--- a/HelpDeskFrontEnd/src/app/user-detail/user-detail.component.html
+++ b/HelpDeskFrontEnd/src/app/user-detail/user-detail.component.html
@@ -1,1 +1,13 @@
-<p>user-detail works!</p>
+<!-- <div>
+
+    <div>
+
+        User ID:{{user.id}}
+
+        User Name:{{user.Name}}
+
+        User Email:{{user.email}}
+
+    </div>
+
+</div> -->
