frontend callbacks are complete

--- a/HelpDeskFrontEnd/src/app/app.component.html
+++ b/HelpDeskFrontEnd/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>IT Helpdesk</h1>
 <h5>(Have you tried turning it on and off again...?)</h5>
-<app-ticket-detail></app-ticket-detail>
+<!-- <app-ticket-list></app-ticket-list>
+<app-user-list></app-user-list> -->
+<app-favorties-list></app-favorties-list>
