--- a/HelpDeskFrontEnd/src/app/favorties-list/favorties-list.component.html
+++ b/HelpDeskFrontEnd/src/app/favorties-list/favorties-list.component.html
@@ -1,5 +1,7 @@
 <div>
     <ng-container *ngFor="let fav of FavList">
-        <app-ticket-detail [favorite]="fav" (delete)="deleteOne($event)" (update)="updateOne($event)"></app-ticket-detail>
+        <app-favorties-detail [favorite]="fav" 
+            (delete)="deleteOne($event)" 
+            (update)="updateOne($event)"></app-favorties-detail>
     </ng-container>
     </div>
