--- a/HelpDeskFrontEnd/src/app/ticket-detail/ticket-detail.component.html
+++ b/HelpDeskFrontEnd/src/app/ticket-detail/ticket-detail.component.html
@@ -5,7 +5,7 @@
                 <td>Ticket</td><td>{{ ticket.ticket_id }}</td>
             </tr>
             <tr>
-                <td>Requester</td><td>{{ ticket.Requester}</td>
+                <td>Requester</td><td>{{ ticket.requester }}</td>
             </tr>
             <tr>
                 <td>Details</td><td>{{ ticket.problemdetails}}</td>
