--- a/HelpDeskFrontEnd/src/app/user-list/user-list.component.html
+++ b/HelpDeskFrontEnd/src/app/user-list/user-list.component.html
@@ -1,5 +1,7 @@
 <div>
     <ng-container *ngFor="let user of UserList">
-        <app-ticket-detail [user]="user" (delete)="deleteOne($event)" (update)="updateOne($event)"></app-ticket-detail>
+        <app-user-detail [user]="user" 
+            (delete)="deleteOne($event)" 
+            (update)="updateOne($event)"></app-user-detail>
     </ng-container>
     </div>
