--- a/HelpDeskFrontEnd/src/app/app.component.html
+++ b/HelpDeskFrontEnd/src/app/app.component.html
@@ -1,5 +1,10 @@
 <h1>IT Helpdesk</h1>
 <h5>(Have you tried turning it on and off again...?)</h5>
-<!-- <app-ticket-list></app-ticket-list>
-<app-user-list></app-user-list> -->
-<app-favorties-list></app-favorties-list>
+<button><a routerLink="/">Login</a>&nbsp;</button>
+<button><a routerLink="tickets">Tickets</a>&nbsp;</button>
+<button><a routerLink="favorites">Bookmarks</a>&nbsp;</button>
+
+
+<h2>Select User</h2>
+
+<router-outlet></router-outlet>
