update to routing and buttons

--- a/HelpDeskFrontEnd/src/app/app.component.html
+++ b/HelpDeskFrontEnd/src/app/app.component.html
@@ -1,10 +1,10 @@
 <h1>IT Helpdesk</h1>
-<h5>(Have you tried turning it on and off again...?)</h5>
+<h5>(Have you tried turning it on and off again...?)</h5> <br>
 <button><a routerLink="/">Login</a>&nbsp;</button>
 <button><a routerLink="tickets">Tickets</a>&nbsp;</button>
 <button><a routerLink="favorites">Bookmarks</a>&nbsp;</button>
 
 
-<h2>Select User</h2>
+
 
 <router-outlet></router-outlet>
