--- a/HelpDeskFrontEnd/src/app/user-detail/user-detail.component.html
+++ b/HelpDeskFrontEnd/src/app/user-detail/user-detail.component.html
@@ -12,8 +12,9 @@
             </tr>
         </tbody>
     </table>
-    <button (click)="turnOnEdit()">Edit</button>
-    <button (click)="deleteMe()">Delete</button>
+    <button (click)="login()">Login</button> &nbsp;
+    <button (click)="turnOnEdit()">Edit</button> &nbsp;
+    <button (click)="deleteMe()">Delete</button> &nbsp;
 </div>
 <div *ngIf="editMode">
     <tbody>
