updated backend with favorites query

--- a/HelpDeskFrontEnd/src/app/ticket-detail/ticket-detail.component.html
+++ b/HelpDeskFrontEnd/src/app/ticket-detail/ticket-detail.component.html
@@ -2,7 +2,7 @@
     <table rules="all">
         <tbody>
             <tr>
-                <td>Ticket</td><td>{{ ticket.ticket_id }}</td>
+                <td>Ticket #</td><td>{{ ticket.ticket_id }}</td>
             </tr>
 
             <tr>
